[package]
name = "primes"
authors = [ "Steve Whittle <narfit66@googlemail.com>" ]
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustversion = "1.0"

[build-dependencies]
rustversion = "1.0"
